<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:weightSum="10"
    tools:context="venturus.org.br.ventuchat.MainActivity">

    <ImageView
        android:id="@+id/main_logo_image"
        android:layout_width="wrap_content"
        android:layout_weight="9"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/main_logo_image"/>

    <TextView
        android:id="@+id/main_nickname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/main_nickname_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/main_nickname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:imeOptions="actionGo"
        android:hint="@string/main_nickname_input"/>

    <Button
        android:id="@+id/main_entry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/main_entry_button"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary" />

</LinearLayout>
