<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/chat_list_name_initial"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/chat_list_name_initial"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@android:color/holo_blue_dark" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <TextView
            android:id="@+id/chat_list_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_list_author"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/chat_list_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_list_message"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <TextView
        android:id="@+id/chat_list_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/chat_list_time"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>